# micrograd

./: README.md  note.ipynb  pyproject.toml  requirements.txt
micrograd/: core.py  train.py
tests/micrograd/: test_core.py
