[build-system]
requires = ["setuptools >= 81.8.2", "setuptools_scm>=8.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "micrograd"
dynamic = ["version", "dependencies"]
description = "Simple byte-pair encoding tokenizer"
requires-python = ">=3.12"

[tool.setuptools]
package-dir = {"micrograd" = "micrograd"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
